feat: sql data storage and retrieve